# PySelector

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/pyselector/: __init__.py  constants.py  helpers.py  interfaces.py  key_manager.py  markup.py  selector.py
src/pyselector/menus/: dmenu.py  fzf.py  rofi.py
tests/: test_dmenu.py  test_fzf.py  test_helpers.py  test_key_manager.py  test_rofi.py
